WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51515
REGRESSION (WK2): Plugins swallow CMD-W, CMD-Q, and probably other shortcuts
https://bugs.webkit.org/show_bug.cgi?id=51515
Summary
REGRESSION (WK2): Plugins swallow CMD-W, CMD-Q, and probably other shortcuts
Anders Carlsson
Reported
2010-12-22 18:48:15 PST
REGRESSION (WK2): Plugins swallow CMD-W, CMD-Q, and probably other shortcuts
Attachments
Patch
(2.36 KB, patch)
2010-12-22 18:49 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-12-22 18:48:52 PST
<
rdar://problem/8740926
>
Anders Carlsson
Comment 2
2010-12-22 18:49:34 PST
Created
attachment 77292
[details]
Patch
Anders Carlsson
Comment 3
2010-12-22 18:54:00 PST
Committed
r74530
: <
http://trac.webkit.org/changeset/74530
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug