2010-12-22  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        REGRESSION (WK2): Plugins swallow CMD-W, CMD-Q, and probably other shortcuts
        https://bugs.webkit.org/show_bug.cgi?id=51515
        <rdar://problem/8740926>

        Always return false for keyboard events where the command key is down.

        * WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:
        (WebKit::NetscapePlugin::platformHandleKeyboardEvent):


Canonical link: https://commits.webkit.org/64869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74530 268f45cc-cd09-0410-ab3c-d52691b4dbfc